--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= libasm: cross assemble/disassemble library =
+0;256;0c= libasm: cross assemble/disassemble library =
 
 The libasm allows assembling and disassembling supported retro CPUs on
 a small environment (less than 9kB-17kB Flash and 350B RAM on AVR
@@ -6,7 +6,7 @@ Arduino).
 
 == Supported target CPUs ==
 
-* MC6800, MC6801, HD6301, MC6805, MC68HC05, MC68HC11
+* MC6800, MC6801, HD6301, MC6805, MC146805, MC68HC05, MC68HC11
 * MC6809, HD6309
 * MOS6502, G65SC02, R65C02, W65C02S
 * W65C816S
@@ -28,7 +28,7 @@ Arduino).
 
 * Arduino (avr, megaavr, samd, teensy)
 * PlatformIO (atmelavr, atmelmegaavr, atmelsam, teensy)
-* Linux, macOS (`C++14`: `g++`, `clang++`)
+* Linux, macOS ( `C++14` )
 
 NOTE: More information about this library can be found at
 https://github.com/tgtakaoka/libasm[GitHub]
