[TMS32010] Add TMS32010 Assembler

--- a/README.adoc
+++ b/README.adoc
@@ -20,6 +20,7 @@ Arduino).
 * INS8060 (SC/MP)
 * INS8070
 * CDP1802, CDP1804, CDP1804A
+* TMS32010
 * i8086
 * TMS9900, TMS9995, TMS99105
 * MC68000
