Add Arduino and PlatformIO CI
- Add arduino-ci.yml workflow
- Add arduino-ci.yml badge to README
- Add includes properties
- Add platformio-ci.yml workflow
- Add platformio-ci.yml badge to README

--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,6 @@
 image:https://github.com/tgtakaoka/libasm/actions/workflows/ccpp.yml/badge.svg[link="https://github.com/tgtakaoka/libasm/actions/workflows/ccpp.yml"]
+image:https://github.com/tgtakaoka/libasm/actions/workflows/arduino-ci.yml/badge.svg[https://github.com/tgtakaoka/libasm/actions/workflows/arduino-ci.yml]
+image:https://github.com/tgtakaoka/libasm/actions/workflows/platformio-ci.yml/badge.svg[https://github.com/tgtakaoka/libasm/actions/workflows/platformio-ci.yml]
 
 = libasm: cross assemble/disassemble library =
 
