--- a/README.adoc
+++ b/README.adoc
@@ -59,14 +59,14 @@ interface.
 On POSIX environment, assembler command line interface is provided.
 It can generate Intel HEX or Motorola S-Record output.
 
-    libasm assembler (version 1.6.22)
+    libasm assembler (version 1.6.23)
     usage: asm [-o <output>] [-l <list>] <input>
       -C <CPU>    : target CPU
                     MC6800, MC6801, HD6301, MC68HC11, MC6805, MC146805, MC68HC05
                     MC6809, HD6309, MOS6502, R65C02, G65SC02, W65C02S, W65C816S
                     i8039, i8048, i80C39, i80C48, MSM80C39, MSM80C48, i8051
                     i8080, i8085, Z80, Z8, Z86C, Z88, TLCS90, INS8060, INS8070
-                    CDP1802, CDP1804, CDP1804A, TMS32010, TMS32015, i8086
+                    CDP1802, CDP1804, CDP1804A, TMS32010, TMS32015, i8086, i8096
                     MC68000, TMS9900, TMS9995, TMS99105, Z8001, Z8002, NS32032
                     MN1610, MN1613, MN1613A
       -o <output> : output file
@@ -83,14 +83,14 @@ It can generate Intel HEX or Motorola S-Record output.
 On POSIX environment, disassembler command line interface is provided.
 It can read Intel HEX or Motorola S-Record input.
 
-    libasm disassembler (version 1.6.22)
+    libasm disassembler (version 1.6.23)
     usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
       -C <CPU>    : target CPU
                     MC6800, MC6801, HD6301, MC68HC11, MC6805, MC146805, MC68HC05
                     MC6809, HD6309, MOS6502, R65C02, G65SC02, W65C02S, W65C816S
                     i8039, i8048, i80C39, i80C48, MSM80C39, MSM80C48, i8051
                     i8080, i8085, Z80, Z8, Z86C, Z88, TLCS90, INS8060, INS8070
-                    CDP1802, CDP1804, CDP1804A, TMS32010, TMS32015, i8086
+                    CDP1802, CDP1804, CDP1804A, TMS32010, TMS32015, i8086, i8096
                     MC68000, TMS9900, TMS9995, TMS99105, Z8001, Z8002, NS32032
                     MN1610, MN1613, MN1613A
       -o <output> : output file
