--- a/README.adoc
+++ b/README.adoc
@@ -60,7 +60,7 @@ interface.
 On POSIX environment, assembler command line interface is provided.
 It can generate Intel HEX or Motorola S-Record output.
 
-    libasm assembler (version 1.6.24)
+    libasm assembler (version 1.6.26)
     usage: asm [-o <output>] [-l <list>] <input>
       -C <CPU>    : target CPU
                     MC6800 MC6801 HD6301 MC68HC11 MC6805 MC146805 MC68HC05
@@ -78,13 +78,30 @@ It can generate Intel HEX or Motorola S-Record output.
       -h          : use lowe case letter for hexadecimal
       -n          : output line number to list file
       -v          : print progress verbosely
+      -X<name>=<vale>
+                  : extra options (<type> [, <CPU>])
+      comment-char    : line comment starting letter  (char)
+      pc-bits         : program counter width in bit, default 13  (int, 6805)
+      setdp           : set direct page register  (int, 6809)
+      longa           : enable 16-bit accumulator  (bool, 6502)
+      longi           : enable 16-bit index registers  (bool, 6502)
+      setrp           : set register pointer  (int, Z8)
+      setrp0          : set register pointer 0  (int, Z8)
+      setrp1          : set register pointer 1  (int, Z8)
+      use-register    : enable register name Rn  (bool, 1802)
+      smart-branch    : enable optimizing to short branch  (bool, 1802)
+      optimize-segment: enable optimizing segment override  (bool, 8086)
+      alias           : accept An as destination operand  (bool, 68000)
+      short-direct    : enable optimizing direct addressing  (bool, Z8001)
+      fpu             : floating point co-processor  (text, 32032)
+      pmmu            : memory management unit  (text, 32032)
 
 == Disassembler command line interface ==
 
 On POSIX environment, disassembler command line interface is provided.
 It can read Intel HEX or Motorola S-Record input.
 
-    libasm disassembler (version 1.6.24)
+    libasm disassembler (version 1.6.26)
     usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
       -C <CPU>    : target CPU
                     MC6800 MC6801 HD6301 MC68HC11 MC6805 MC146805 MC68HC05
@@ -103,6 +120,28 @@ It can read Intel HEX or Motorola S-Record input.
       -h          : use lower case letter for hexadecimal
       -u          : use upper case letter for output
       -v          : print progress verbosely
+      -X<name>=<vale>
+                  : extra options (<type> [, <CPU>])
+      relative        : program counter relative branch target  (bool)
+      uppercase       : uppercase instruction and register name  (bool)
+      c-style         : C language style number constant  (bool)
+      origin-char     : letter for origin symbol  (char)
+      pc-bits         : program counter width in bit, default 13  (int, 6805)
+      longa           : enable 16-bit accumulator  (bool, 6502)
+      longi           : enable 16-bit index registers  (bool, 6502)
+      indirect-long   : [] for indirect long operand  (bool, 6502)
+      work-register   : prefer work register name than alias address  (bool, Z8)
+      imm-prefix      : immediate prefix # (default =)  (bool, 8070)
+      use-register    : use register name Rn  (bool, 1802)
+      segment-insn    : segment override as instruction  (bool, 8086)
+      string-insn     : string instruction as repeat operand  (bool, 8086)
+      absolute        : zero register indexing as absolute addressing  (bool, 8096)
+      short-direct    : short direct addressing as ||  (bool, Z8001)
+      ioaddr-prefix   : I/O address prefix # (default none)  (bool, Z8001)
+      pcrel-paren     : addr(pc) as program counter relative  (bool, 32032)
+      external-paren  : disp2(disp(ext)) as extenal addressing  (bool, 32032)
+      stropt-bracket  : string instruction operand in []  (bool, 32032)
+      float-prefix    : float constant prefix 0f (default none)  (bool, 32032)
 
 == Supported host environment ==
 
