Update listing format

--- a/README.adoc
+++ b/README.adoc
@@ -13,22 +13,25 @@ Arduino).
 == Assembler library interface ==
 
 Assembling MC68HC11 instruction in string to binary can be done in a
-minutes. You can also add symbols table lookup via
-https://github.com/tgtakaoka/libasm/blob/main/src/array_memory.h[`SymbolTable`]
+minutes. You can also add symbol table lookup via
+https://github.com/tgtakaoka/libasm/blob/main/src/symbol_table.h[`SymbolTable`]
 interface.
 
-    #include <asm_mc6800.h>
-    libasm::mc6800::AsmMc6800 asm6800;
-    asm6800.setCpu("68HC11");
+[source,C++]
+----
+#include <asm_mc6800.h>
+libasm::mc6800::AsmMc6800 asm6800;
+asm6800.setCpu("68HC11");
 
-    const char *text = "SUBD $90";
-    libasm::Insn insn(0x1000);
+const char *text = "SUBD $90";
+libasm::Insn insn(0x1000);
 
-    asm6800.encode(text, insn);
-    assert(insn.address()  == 0x1000);
-    assert(insn.length()   == 2);    // direct addressing
-    assert(insn.bytes()[0] == 0x93); // SUBD
-    assert(insn.bytes()[1] == 0x90); // $90
+asm6800.encode(text, insn);
+assert(insn.address()  == 0x1000);
+assert(insn.length()   == 2);    // direct addressing
+assert(insn.bytes()[0] == 0x93); // SUBD
+assert(insn.bytes()[1] == 0x90); // $90
+----
 
 == Disassembler library interface ==
 
@@ -37,111 +40,125 @@ https://github.com/tgtakaoka/libasm/blob/main/src/array_memory.h[`ArrayMemory`]
 or implements your own
 https://github.com/tgtakaoka/libasm/blob/main/src/dis_memory.h[`DisMemory`]
 interface to feed binaries. You can also add symbol table lookup via
-https://github.com/tgtakaoka/libasm/blob/main/src/array_memory.h[`SymbolTable`]
+https://github.com/tgtakaoka/libasm/blob/main/src/symbol_table.h[`SymbolTable`]
 interface.
 
-    #include <dis_mc68000.h>
-    libasm::mc68000::DisMc68000 dis68k;
-    dis68k.setOption("relative", "true");
+[source,C++]
+----
+#include <dis_mc68000.h>
+libasm::mc68000::DisMc68000 dis68k;
+dis68k.setOption("relative", "true");
 
-    const uint16_t words[] = {0047372, 0x1232};
-    const libasm::ArrayMemory memory(0x100, words, sizeof(words));
-    auto dismem = memory.iterator();
-    libasm::Insn insn(dismem.address());
-    char opr[80];
+const uint16_t words[] = {0047372, 0x1232};
+const libasm::ArrayMemory memory(0x100, words, sizeof(words));
+libasm::DisMemory dismem = memory.iterator();
+libasm::Insn insn(dismem.address());
+char opr[80];
 
-    dis68k.decode(dismem, insn, opr, sizeof(opr));
-    assert(insn.address() == 0x100);
-    assert(std::string(insn.name()) == "jmp");
-    assert(std::string(opr) == "(*+$1234,pc)");
+dis68k.decode(dismem, insn, opr, sizeof(opr));
+assert(insn.address() == 0x100);
+assert(std::string(insn.name()) == "jmp");
+assert(std::string(opr) == "(*+$1234,pc)");
+----
+
+== Arduino sketch examples ==
+
+There are assembler and disassembler example sketches you can try to
+run on actual Arduino board at
+https://github.com/tgtakaoka/libasm/tree/devel/examples[examples].
+
 
 == Assembler command line interface ==
 
 On POSIX environment, assembler command line interface is provided.
 It can generate Intel HEX or Motorola S-Record output.
 
-    libasm assembler (version 1.6.28)
-    usage: asm [-o <output>] [-l <list>] <input>
-      -C <CPU>    : target CPU
-                    MC6800 MB8861 MC6801 HD6301 MC68HC11 MC6805 MC146805
-                    MC68HC05 MC6809 HD6309 MOS6502 R65C02 G65SC02 W65C02S
-                    W65C816S i8039 i8048 i80C39 i80C48 MSM80C39 MSM80C48 i8051
-                    i8080 i8085 V30EMU Z80 Z8 Z86C Z88 TLCS90 INS8060 INS8070
-                    CDP1802 CDP1804 CDP1804A SCN2650 TMS32010 TMS32015 i8086
-                    i80186 V30 i8096 MC68000 TMS9900 TMS9995 TMS99105 Z8001
-                    Z8002 NS32032 MN1610 MN1613 MN1613A
-      -o <output> : output file
-      -l <list>   : list file
-      -S[<bytes>] : output Motorola S-Record format
-      -H[<bytes>] : output Intel HEX format
-                  : optional <bytes> specifies data record length (max 32)
-      -h          : use lowe case letter for hexadecimal
-      -n          : output line number to list file
-      -v          : print progress verbosely
-      -X<name>=<vale>
-                  : extra options (<type> [, <CPU>])
-      comment-char    : line comment starting letter  (char)
-      pc-bits         : program counter width in bit, default 13  (int, 6805)
-      setdp           : set direct page register  (int, 6809)
-      longa           : enable 16-bit accumulator  (bool, 6502)
-      longi           : enable 16-bit index registers  (bool, 6502)
-      setrp           : set register pointer  (int, Z8)
-      setrp0          : set register pointer 0  (int, Z8)
-      setrp1          : set register pointer 1  (int, Z8)
-      use-register    : enable register name Rn  (bool, 1802)
-      smart-branch    : enable optimizing to short branch  (bool, 1802)
-      optimize-segment: enable optimizing segment override  (bool, 8086)
-      alias           : accept An as destination operand  (bool, 68000)
-      short-direct    : enable optimizing direct addressing  (bool, Z8001)
-      fpu             : floating point co-processor  (text, 32032)
-      pmmu            : memory management unit  (text, 32032)
+----
+libasm assembler (version 1.6.28)
+usage: asm [-o <output>] [-l <list>] <input>
+  -C <CPU>    : target CPU
+                MC6800 MB8861 MC6801 HD6301 MC68HC11 MC6805 MC146805
+                MC68HC05 MC6809 HD6309 MOS6502 R65C02 G65SC02 W65C02S
+                W65C816S i8039 i8048 i80C39 i80C48 MSM80C39 MSM80C48 i8051
+                i8080 i8085 V30EMU Z80 Z8 Z86C Z88 TLCS90 INS8060 INS8070
+                CDP1802 CDP1804 CDP1804A SCN2650 TMS32010 TMS32015 i8086
+                i80186 V30 i8096 MC68000 TMS9900 TMS9995 TMS99105 Z8001
+                Z8002 NS32032 MN1610 MN1613 MN1613A
+  -o <output> : output file
+  -l <list>   : list file
+  -S[<bytes>] : output Motorola S-Record format
+  -H[<bytes>] : output Intel HEX format
+              : optional <bytes> specifies data record length (max 32)
+  -h          : use lowe case letter for hexadecimal
+  -n          : output line number to list file
+  -v          : print progress verbosely
+  -X<name>=<vale>
+              : extra options (<type> [, <CPU>])
+  comment-char    : line comment starting letter  (char)
+  pc-bits         : program counter width in bit, default 13  (int, 6805)
+  setdp           : set direct page register  (int, 6809)
+  longa           : enable 16-bit accumulator  (bool, 6502)
+  longi           : enable 16-bit index registers  (bool, 6502)
+  setrp           : set register pointer  (int, Z8)
+  setrp0          : set register pointer 0  (int, Z8)
+  setrp1          : set register pointer 1  (int, Z8)
+  use-register    : enable register name Rn  (bool, 1802)
+  smart-branch    : enable optimizing to short branch  (bool, 1802)
+  optimize-segment: enable optimizing segment override  (bool, 8086)
+  alias           : accept An as destination operand  (bool, 68000)
+  short-direct    : enable optimizing direct addressing  (bool, Z8001)
+  fpu             : floating point co-processor  (text, 32032)
+  pmmu            : memory management unit  (text, 32032)
+----
 
 == Disassembler command line interface ==
 
 On POSIX environment, disassembler command line interface is provided.
 It can read Intel HEX or Motorola S-Record input.
 
-    libasm disassembler (version 1.6.28)
-    usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
-      -C <CPU>    : target CPU
-                    MC6800 MB8861 MC6801 HD6301 MC68HC11 MC6805 MC146805
-                    MC68HC05 MC6809 HD6309 MOS6502 R65C02 G65SC02 W65C02S
-                    W65C816S i8039 i8048 i80C39 i80C48 MSM80C39 MSM80C48 i8051
-                    i8080 i8085 V30EMU Z80 Z8 Z86C Z88 TLCS90 INS8060 INS8070
-                    CDP1802 CDP1804 CDP1804A SCN2650 TMS32010 TMS32015 i8086
-                    i80186 V30 i8096 MC68000 TMS9900 TMS9995 TMS99105 Z8001
-                    Z8002 NS32032 MN1610 MN1613 MN1613A
-      -o <output> : output file
-      -l <list>   : list file
-      <input>     : file can be Motorola S-Record or Intel HEX format
-      -A start[,end]
-                  : disassemble start address and optional end address
-      -r          : use program counter relative notation
-      -h          : use lower case letter for hexadecimal
-      -u          : use upper case letter for output
-      -v          : print progress verbosely
-      -X<name>=<vale>
-                  : extra options (<type> [, <CPU>])
-      relative        : program counter relative branch target  (bool)
-      uppercase       : uppercase instruction and register name  (bool)
-      c-style         : C language style number constant  (bool)
-      origin-char     : letter for origin symbol  (char)
-      pc-bits         : program counter width in bit, default 13  (int, 6805)
-      longa           : enable 16-bit accumulator  (bool, 6502)
-      longi           : enable 16-bit index registers  (bool, 6502)
-      indirect-long   : [] for indirect long operand  (bool, 6502)
-      work-register   : prefer work register name than alias address  (bool, Z8)
-      imm-prefix      : immediate prefix # (default =)  (bool, 8070)
-      use-register    : use register name Rn  (bool, 1802)
-      segment-insn    : segment override as instruction  (bool, 8086)
-      string-insn     : string instruction as repeat operand  (bool, 8086)
-      absolute        : zero register indexing as absolute addressing  (bool, 8096)
-      short-direct    : short direct addressing as ||  (bool, Z8001)
-      ioaddr-prefix   : I/O address prefix # (default none)  (bool, Z8001)
-      pcrel-paren     : addr(pc) as program counter relative  (bool, 32032)
-      external-paren  : disp2(disp(ext)) as extenal addressing  (bool, 32032)
-      stropt-bracket  : string instruction operand in []  (bool, 32032)
-      float-prefix    : float constant prefix 0f (default none)  (bool, 32032)
+----
+libasm disassembler (version 1.6.28)
+usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
+  -C <CPU>    : target CPU
+                MC6800 MB8861 MC6801 HD6301 MC68HC11 MC6805 MC146805
+                MC68HC05 MC6809 HD6309 MOS6502 R65C02 G65SC02 W65C02S
+                W65C816S i8039 i8048 i80C39 i80C48 MSM80C39 MSM80C48 i8051
+                i8080 i8085 V30EMU Z80 Z8 Z86C Z88 TLCS90 INS8060 INS8070
+                CDP1802 CDP1804 CDP1804A SCN2650 TMS32010 TMS32015 i8086
+                i80186 V30 i8096 MC68000 TMS9900 TMS9995 TMS99105 Z8001
+                Z8002 NS32032 MN1610 MN1613 MN1613A
+  -o <output> : output file
+  -l <list>   : list file
+  <input>     : file can be Motorola S-Record or Intel HEX format
+  -A start[,end]
+              : disassemble start address and optional end address
+  -r          : use program counter relative notation
+  -h          : use lower case letter for hexadecimal
+  -u          : use upper case letter for output
+  -v          : print progress verbosely
+  -X<name>=<vale>
+              : extra options (<type> [, <CPU>])
+  relative        : program counter relative branch target  (bool)
+  uppercase       : uppercase instruction and register name  (bool)
+  c-style         : C language style number constant  (bool)
+  origin-char     : letter for origin symbol  (char)
+  pc-bits         : program counter width in bit, default 13  (int, 6805)
+  longa           : enable 16-bit accumulator  (bool, 6502)
+  longi           : enable 16-bit index registers  (bool, 6502)
+  indirect-long   : [] for indirect long operand  (bool, 6502)
+  work-register   : prefer work register name than alias address  (bool, Z8)
+  imm-prefix      : immediate prefix # (default =)  (bool, 8070)
+  use-register    : use register name Rn  (bool, 1802)
+  segment-insn    : segment override as instruction  (bool, 8086)
+  string-insn     : string instruction as repeat operand  (bool, 8086)
+  absolute        : zero register indexing as absolute addressing  (bool, 8096)
+  short-direct    : short direct addressing as ||  (bool, Z8001)
+  ioaddr-prefix   : I/O address prefix # (default none)  (bool, Z8001)
+  pcrel-paren     : addr(pc) as program counter relative  (bool, 32032)
+  external-paren  : disp2(disp(ext)) as extenal addressing  (bool, 32032)
+  stropt-bracket  : string instruction operand in []  (bool, 32032)
+  float-prefix    : float constant prefix 0f (default none)  (bool, 32032)
+----
 
 == Supported host environment ==
 
