--- a/README.adoc
+++ b/README.adoc
@@ -98,6 +98,7 @@ usage: asm [-o <output>] [-l <list>] <input>
   setdp           : set direct page register  (int, 6809)
   longa           : enable 16-bit accumulator  (bool, 6502)
   longi           : enable 16-bit index registers  (bool, 6502)
+  reg-alias       : emit register alias regarding setrp value  (bool, Z8)
   setrp           : set register pointer  (int, Z8)
   setrp0          : set register pointer 0  (int, Z8)
   setrp1          : set register pointer 1  (int, Z8)
