--- a/README.adoc
+++ b/README.adoc
@@ -140,6 +140,7 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
               : extra options (<type> [, <CPU>])
   relative        : program counter relative branch target  (bool)
   c-style         : C language style number constant  (bool)
+  intel-hex       : Intel style hexadecimal  (bool)
   origin-char     : letter for origin symbol  (char)
   pc-bits         : program counter width in bit, default 13  (int, 6805)
   longa           : enable 16-bit accumulator  (bool, 6502)
