--- a/README.adoc
+++ b/README.adoc
@@ -94,6 +94,7 @@ usage: asm [-o <output>] [-l <list>] <input>
   -v          : print progress verbosely
   --<name>=<vale>
               : extra options (<type> [, <CPU>])
+  list-radix      : set listing radix (8, 16)  (int)
   pc-bits         : program counter width in bit, default 13  (int, 6805)
   setdp           : set direct page register  (int, 6809)
   longa           : enable 16-bit accumulator  (bool, 6502)
@@ -138,6 +139,7 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
   -v          : print progress verbosely
   --<name>=<vale>
               : extra options (<type> [, <CPU>])
+  list-radix      : set listing radix (8, 16)  (int)
   relative        : program counter relative branch target  (bool)
   c-style         : C language style number constant  (bool)
   intel-hex       : Intel style hexadecimal  (bool)
