--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@ Arduino).
 == Assembler library interface ==
 
 Assembling MC68HC11 instruction in string to binary can be done in a
-minutes. You can also add symbol table lookup via
+minute. You can also add symbol table lookup via
 https://github.com/tgtakaoka/libasm/blob/main/src/symbol_table.h[`SymbolTable`]
 interface.
 
@@ -146,7 +146,7 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
   c-style         : C language style number constant  (bool)
   intel-hex       : Intel style hexadecimal  (bool)
   origin-char     : letter for origin symbol  (char)
-  pc-bits         : program counter width in bit, default 13  (int, 6805)
+  pc-bits         : program counter width in bit (default 13)  (int, 6805)
   longa           : enable 16-bit accumulator  (bool, 6502)
   longi           : enable 16-bit index registers  (bool, 6502)
   indirect-long   : [] for indirect long operand  (bool, 6502)
@@ -161,7 +161,7 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
   short-direct    : short direct addressing as ||  (bool, Z8001)
   ioaddr-prefix   : I/O address prefix # (default none)  (bool, Z8001)
   pcrel-paren     : addr(pc) as program counter relative  (bool, 32032)
-  external-paren  : disp2(disp(ext)) as extenal addressing  (bool, 32032)
+  external-paren  : disp2(disp(ext)) as external addressing  (bool, 32032)
   stropt-bracket  : string instruction operand in []  (bool, 32032)
   float-prefix    : float constant prefix 0f (default none)  (bool, 32032)
 ----
