--- a/README.adoc
+++ b/README.adoc
@@ -159,7 +159,8 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
   segment-insn    : segment override as instruction  (bool, 8086)
   string-insn     : string instruction as repeat operand  (bool, 8086)
   use-absolute    : zero register indexing as absolute addressing  (bool, 8096)
-  short-direct    : short direct addressing as ||  (bool, Z8001)
+  short-direct    : use |addr| for short direct notation  (bool, Z8001)
+  segmented-addr  : use <<segment>> notation  (bool, Z8001)
   ioaddr-prefix   : I/O address prefix # (default none)  (bool, Z8001)
   pcrel-paren     : addr(pc) as program counter relative  (bool, 32032)
   external-paren  : disp2(disp(ext)) as external addressing  (bool, 32032)
