--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-image:https://img.shields.io/github/v/release/tgtakaoka/libasm.svg?maxAge=3600[https://github.com/tgtakaoka/libasm/releases]
+`image:https://img.shields.io/github/v/release/tgtakaoka/libasm.svg?maxAge=3600[https://github.com/tgtakaoka/libasm/releases]
 image:https://img.shields.io/badge/License-Apache%202.0-blue.svg[https://github.com/tgtakaoka/libasm/blob/main/LICENSE.md]
 image:https://github.com/tgtakaoka/libasm/actions/workflows/ccpp.yml/badge.svg[link="https://github.com/tgtakaoka/libasm/actions/workflows/ccpp.yml"]
 image:https://github.com/tgtakaoka/libasm/actions/workflows/arduino-ci.yml/badge.svg[https://github.com/tgtakaoka/libasm/actions/workflows/arduino-ci.yml]
@@ -76,7 +76,7 @@ On POSIX environment, assembler command line interface is provided.
 It can generate Intel HEX or Motorola S-Record output.
 
 ----
-libasm assembler (version 1.6.42)
+libasm assembler (version 1.6.43)
 usage: asm [-o <output>] [-l <list>] <input>
   -C <CPU>    : target CPU
                 MC6800 MB8861 MC6801 HD6301 MC68HC11 MC6805 MC146805
@@ -121,7 +121,7 @@ On POSIX environment, disassembler command line interface is provided.
 It can read Intel HEX or Motorola S-Record input.
 
 ----
-libasm disassembler (version 1.6.42)
+libasm disassembler (version 1.6.43)
 usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
   -C <CPU>    : target CPU
                 MC6800 MB8861 MC6801 HD6301 MC68HC11 MC6805 MC146805
