[DIS] Add upper-hex and upper-case options

--- a/README_.adoc
+++ b/README_.adoc
@@ -143,6 +143,8 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
   -v          : print progress verbosely
   --<name>=<vale>
               : extra options (<type> [, <CPU>])
+  upper-hex       : use upper case letter for hexadecimal  (bool)
+  upper-case      : use upper case letter for output  (bool)
   list-radix      : set listing radix (8, 16)  (int)
   relative        : program counter relative branch target  (bool)
   c-style         : C language style number constant  (bool)
