[PDP8] Add "implicit-word" assembler option

--- a/README_.adoc
+++ b/README_.adoc
@@ -110,6 +110,7 @@ usage: asm [-o <output>] [-l <list>] <input>
   setrp1          : set register pointer 1  (int, Z8)
   optimize-index  : optimize zero index  (bool, Z8)
   use-register    : enable register name Rn  (bool, 1802)
+  implicit-word   : unknown instruction defines word  (bool, 6100)
   optimize-segment: enable optimizing segment override  (bool, 8086)
   short-direct    : enable optimizing direct addressing  (bool, Z8001)
   pmmu            : memory management unit  (text, 32032)
@@ -157,7 +158,6 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
   work-register   : prefer work register name than alias address  (bool, Z8)
   use-sharp       : use # (default =) for immediate  (bool, 8070)
   use-register    : use register name Rn  (bool, 1802)
-  ignore-literal  : Ignore literal constant  (bool, 6100)
   segment-insn    : segment override as instruction  (bool, 8086)
   string-insn     : string instruction as repeat operand  (bool, 8086)
   use-absolute    : zero register indexing as absolute addressing  (bool, 8096)
