--- a/README_.adoc
+++ b/README_.adoc
@@ -84,8 +84,8 @@ usage: asm [-o <output>] [-l <list>] <input>
      i80C48 MSM80C39 MSM80C48 i8051 i8080 i8085 V30EMU Z80 Z8 Z86C Z88
      TLCS90 INS8060 INS8070 CDP1802 CDP1804 CDP1804A SCN2650 F3850 IM6100
      HD6120 TMS7000 TMS32010 TMS32015 i8086 i80186 V30 i8096 MC68000
-     TMS9900 TMS9980 TMS9995 TMS99105 Z8001 Z8002 NS32032 MN1610 MN1613
-     MN1613A J11 T11
+     MC68010 TMS9900 TMS9980 TMS9995 TMS99105 Z8001 Z8002 NS32032 MN1610
+     MN1613 MN1613A J11 T11
   -o <output>       : output file
   -l <list>         : list file
   -S[<bytes>]       : output Motorola S-Record format
@@ -128,8 +128,8 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
      i80C48 MSM80C39 MSM80C48 i8051 i8080 i8085 V30EMU Z80 Z8 Z86C Z88
      TLCS90 INS8060 INS8070 CDP1802 CDP1804 CDP1804A SCN2650 F3850 IM6100
      HD6120 TMS7000 TMS32010 TMS32015 i8086 i80186 V30 i8096 MC68000
-     TMS9900 TMS9980 TMS9995 TMS99105 Z8001 Z8002 NS32032 MN1610 MN1613
-     MN1613A J11 T11
+     MC68010 TMS9900 TMS9980 TMS9995 TMS99105 Z8001 Z8002 NS32032 MN1610
+     MN1613 MN1613A J11 T11
   -o <output>      : output file
   -l <list>        : list file
   <input>          : file can be Motorola S-Record or Intel HEX format
