--- a/README_.adoc
+++ b/README_.adoc
@@ -112,6 +112,7 @@ usage: asm [-o <output>] [-l <list>] <input>
   --setrp1          : set register pointer 1 (int: Z8)
   --short-direct    : enable optimizing direct addressing (bool: Z8001)
   --use-register    : enable register name Rn (bool: 1802)
+  --zilog-syntax    : Use Zilog syntax (bool: 8080)
 ----
 
 == Disassembler command line interface ==
@@ -160,6 +161,7 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
   --use-register   : use register name Rn (bool: 1802)
   --use-sharp      : use # (default =) for immediate (bool: 8070)
   --work-register  : prefer work register name than alias address (bool: Z8)
+  --zilog-syntax   : Use Zilog syntax (bool: 8080)
 ----
 
 == Supported host environment ==
