[MC68000] Add MC68851 PMMU support

--- a/README_.adoc
+++ b/README_.adoc
@@ -106,7 +106,7 @@ usage: asm [-o <output>] [-l <list>] <input>
   --optimize-index  : optimize zero index (bool: Z8)
   --optimize-segment: optimize segment override (bool: 8086)
   --pc-bits         : program counter width in bit, default 13 (int: 6805)
-  --pmmu            : memory management unit (text: 32032)
+  --pmmu            : memory management unit (text: 68000, 32032)
   --reg-alias       : emit register alias regarding setrp value (bool: Z8)
   --short-direct    : optimize direct addressing (bool: Z8001)
   --use-register    : enable register name Rn (bool: 1802)
@@ -156,7 +156,7 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
   --longi          : enable 16-bit index registers (bool: 6502)
   --lwordmode      : Long word mode (bool: Z380)
   --pc-bits        : program counter width in bit (default 13) (int: 6805)
-  --pmmu           : memory management unit (text: 32032)
+  --pmmu           : memory management unit (text: 68000, 32032)
   --segment-insn   : segment override as instruction (bool: 8086)
   --segmented-addr : use <<segment>> notation (bool: Z8001)
   --short-direct   : use |addr| for short direct notation (bool: Z8001)
